--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,12 @@
         </small> -->
       </footer>
     </div>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-
+<!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+ -->
     <script>
-    $(".acc-link").click(function(){
-    $(this).toggleClass("acc-toggle").next(".acc-text").slideToggle();
-});
+//     $(".acc-link").click(function(){
+//     $(this).toggleClass("acc-toggle").next(".acc-text").slideToggle();
+// });
   </script>
   </body>
 </html>
