--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,8 +6,8 @@ html {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-          -webkit-font-smoothing: antialiased;
-}
+/*          -webkit-font-smoothing: antialiased;
+*/}
 
 *,*:before,*:after {
   box-sizing: inherit;
