--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,6 +10,15 @@
   margin-right: auto;
 }
 
+.flex {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
+
 footer {
   margin-bottom: $space-2;
 }
