--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -5,8 +5,8 @@
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: $space-half;
   font-weight: 600;
-  line-height: 1.2;
-  color: #313131;
+  line-height: 1.1;
+  color: $text;
   text-rendering: optimizeLegibility;
   font-family: $sans;
 }
@@ -17,6 +17,7 @@ h1 {
 
 h2 {
   margin-top: $space;
+  padding-top: $space;
   font-size: 1.5rem;
 }
 
@@ -30,25 +31,19 @@ h4, h5, h6 {
   font-size: $space;
 }
 
-p {
+p, ul, ol, dl {
   margin-top: 0;
   margin-bottom: $space;
-  font-size: 1.2rem
+  font-size: 1.1rem
 }
 
 strong {
   color: #303030;
 }
 
-ul, ol, dl {
-  margin-top: 0;
-  margin-bottom: $space;
-  font-size: 1.2rem
-}
-
 ul,ol,dl {
   margin: $space 0;
-  border-left: 5px solid $gold;
+  border-left: 1px solid $gold;
   padding-left: 3rem;
   li + li {
     margin-top: $space-half;
