--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,20 +19,20 @@ $brown: #8f5536;
 $gold: #DDB349;
 
 $serif: charter, georgia, serif;
-$sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$sans: karla, avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 $font-size: 1em;
 $line-height: 1.5;
 
-$body-color: #515151;
-$body-bg: #fff;
+$body-color: #333;
+$body-bg: #eee;
 $link-color: $gold;
 
 $border-color: #e5e5e5;
 
 $large-breakpoint: 38em;
-$large-font-size: 20px;
+$large-font-size: 1.2rem;
 
-$code-font-family: Menlo, Monaco, "Courier New", monospace;
+$code-font-family: Input, Menlo, Monaco, "Courier New", monospace;
 $code-color: #bf616a;
 
 $space: 1rem;
